# TraceMind

./: .gitignore  ARCHITECTURE.md  CHANGES.md  MIGRATION.md  README.md  README_T-LLM-01.txt  README_T-POLICY-02.txt  llm_1.md  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt  trace_config.toml  trace_mind_handbook.md
docs/: CHANGELOG.md  daemon.md  recipes-v1.md  runtime.md  tm_server_api.md  validation.md
examples/: intelligent_loop.yaml  obs_demo.py  validation.toml
housekeeping/: cleanup-report.md  pkg-contents.txt
prompts/: derive_agent_bundle_v0.md
scripts/: clean.sh  daemon_smoke.sh  docs_serve.sh  offline_eval.py  perf_async_runner.py  release_checklist.sh  release_smoke.sh  run_tests.sh  trace_overlay_checker.py  validate_dsl_examples.sh  validate_examples.sh
templates/: triggers.yaml
tests/: test_agent_bundle_schema_v0.py  test_agent_registry.py  test_ai_execute_plan.py  test_ai_llm_call_fake.py  test_ai_plan_step.py  test_ai_reflect_step.py  test_allow_registry.py  test_api_contract_v1.py  test_artifacts_schema.py  test_binding_router.py  test_binlog_basic.py  test_builtin_agents_v0.py  test_capability_catalog.py  test_cli_detached.py  test_cli_rerun.py  test_cli_run_bundle_v0.py  test_cli_scaffold.py  test_cli_smoke.py  test_composer_engine.py  test_connectors_k8s.py  test_consistency_v0.py  test_controller_artifacts_schema_v0.py  test_controller_cycle_runner_v0.py  test_controller_demo_bundle_v0.py  test_core_monolithic.py  test_daemon_cli.py  test_daemon_service.py  test_decide_agent_replay_v0.py  test_decision_hook.py  test_engine.py  (+77 more)
(+238 files in other folders)
